# nebula

./: .gitignore  README.md  pyproject.toml
nebula/: bot.py  main.py  memory.py  web.py
nebula/static/: index.html
